1.3.3:
  - added backwards search (ticket #190)
  - fixed goto page handling (ticket #198)
  - some other small fixes
  - WPI: made http links clickable
  - updated poppler to 0.16.3
  - updated freetype to 2.4.4
  - updated jpeg to 8b
  - WPI: installing the right readme, if translated


1.3.2:
  - WPI: Fixed mismatch between the package names and actual plugins they contain.
  - WPI: Fixed the version number.
  - WPI: Skip the WPS object creation dialog to avoid a possible WPS association
    inconsistency (closed ticket 128).
  - WPI: Added dependency on "LIBC 0.6 Runtime" and "GCC4 Runtime" WPI packages.
  - Changed the versioning scheme from X.YZ to X.Y.Z.


1.31:
  - Renamed "Full screen" mode to "Presentation" mode (activated by F5 now) and
    renamed "Maximized view" mode to "Full screen" mode (same F11 shortcut),
    for clarity and similarity with other applications (closed ticket #176).
  - Renamed "$switchfullscreen" pipe command to "$presentation".
  - Fixed copy to clipboard in presentation mode (closed ticket #169). All
    normal accelerators now work in presentation mode too, including Ctrl-O,
    Ctrl-+, Ctrl-- and so on.
  - Both the full screen and presentation modes can now be closed by Alt-F4.
  - The full screen or presentation mode is properly saved when exiting Lucide
    and restored at startup.
  - If Lucide is closed minimized, it will be automatically restored at startup.
  - Pressing the "+/=" key moves to the next page (previously, it was necessary
    to hold Shift to make it work in many keyboard layouts).
  - Made copy to clipboard work in input fields in presentation mode.
  - Made copy to clipboard work in the document information dialog with Ctrl+C/
    Ctrl+Ins (closed ticket #142). Ctrl+A/Ctrl+/ may be used to select all
    lines for copying. This dialog can be now activated with Ctrl+I.
  - Made copy to clipboard work in the font information dialog.
  - Unified keyboard navigation in all modes (closed ticket #177):