@@ -7,6 +7,7 @@
   - updated freetype to 2.4.4
   - updated jpeg to 8b
   - WPI: installing the right readme, if translated
+  - saved some settings from print dialog (ticket #225)
 
 
 1.3.2:
